--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi
-uvicorn
-google-ads==24.0.0
-python-multipart
-
+fastapi==0.110.0
+uvicorn[standard]==0.29.0
+google-ads==23.0.0
+pydantic==1.10.13
+python-dotenv==1.0.1
