--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 fastapi==0.110.0
 uvicorn[standard]==0.29.0
-google-ads==21.3.0
+google-ads==15.1.0
 pydantic==1.10.13
 python-dotenv==1.0.1
 openai
-PyYAML
+PyYAML==6.0
+
